# tls-cert-analyzer

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  GETTING_STARTED.md  LICENSE-APACHE  PROJECT_SUMMARY.md  README.md
.github/workflows/: ci.yml
benches/: cert_parsing.rs
examples/: basic_analysis.rs
src/: error.rs  lib.rs  main.rs
src/analysis/: crypto.rs  expiry.rs  mod.rs  san.rs
src/cert/: fetcher.rs  mod.rs  parser.rs  validator.rs
src/output/: mod.rs
