[package]
name = "tls-cert-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Prateek Yadav <prateek.yadav@edu.rptu.de>"]
license = "MIT OR Apache-2.0"
description = "Graduate-level TLS certificate analyzer with security auditing capabilities"
repository = "https://github.com/kkyrusobad/tls-cert-analyzer"
readme = "README.md"
keywords = ["tls", "x509", "certificate", "security", "cryptography"]
categories = ["command-line-utilities", "cryptography", "network-programming"]

[dependencies]
# TLS and certificate parsing
rustls = "0.23"
rustls-pemfile = "2.0"
x509-parser = "0.16"
webpki-roots = "0.26"
tokio-rustls = "0.26"

# Network and async
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }

# CLI
clap = { version = "4.4", features = ["derive", "cargo"] }
console = "0.15"
indicatif = "0.17"

# Serialization and output
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.15"

# Time handling
chrono = "0.4"
humantime = "2.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
colored = "2.1"
url = "2.5"
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
mockito = "1.2"
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"

[[bench]]
name = "cert_parsing"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
